# caf.base

./: .gitignore  README.md  RELEASE.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: black.yml  build.yml  linting.yml  tests.yml
docs/source/: api.rst  conf.py  index.rst  start.rst  tutorial.rst  user_guide.rst
docs/source/usage/: index.rst
examples/: GALLERY_HEADER.rst
src/caf/base/: __init__.py  data_structures.py  segmentation.py  segments.py  zoning.py
src/caf/base/seg_translations/: p_to_uc.csv  p_to_userclass.csv
src/caf/base/segments/: direction.yml  direction_od.yml  m_hb.yml  m_nhb.yml  norcom_0v1+.yml  p_hb.yml  p_nhb.yml  total.yml  tp_return.yml  uc.yml  userclass.yml
tests/: conftest.py  implicit_op_checks.py  test_dvec.py  test_example.py  test_segmentation.py  test_segments.py
